fixtures/runtime/invalid/functions/missing-arg.php
<?php
function one($a)
{
    return $a;
}

one();
